--- a/style.css
+++ b/style.css
@@ -1,54 +1,118 @@
 *{
     padding: 0;
-    margin:0;
+    margin: 0;
+    
 }
-header{
+nav{
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 20px 20px;
   
-    margin-left: 20px;
-    margin-right: 20px;
-    background-color: rgb(255, 255, 255);
-    margin: 10px;
-    
+   
     
 }
-header ul{
-    list-style: none;
-  align-items: center;
-    
-}
-ul li{
-    display: inline-flex;
-    padding: 20px;
-    font-weight: 100;
-    
-}
-ul li a{
-    
-    text-decoration: none;
-}
-header .logo img{
-    width:80px;
+nav ul{
+    display: flex;
     align-items: center;
+    list-style-type: none;
+    height: 65px;
+    background-color: indigo;
+    
    
 }
-.logo{
-    display: flex;
-    padding: 20px;
-}
-ul{
-    display: flex;
-}
-ul li:hover{
-    background-color: rgb(40, 37, 223);
-    text-decoration: none;
-    cursor: pointer;
-    color: white;
+nav ul li{
     
+    padding: 0px 20px;
+    width: 100vh;
+    
+  
 }
 
+ul li a{
+    text-decoration: none;
+    align-items: center;
+    color: white;
+    
+   
+}
+.logo img {
+    
+    width: 50px;
+    display: flex;
+   
+}
 ul li a:hover{
+    background-color: white;  
+}
+ul li a:hover{
+    color: indigo;
+}
+
+.out{
+    float: right;
+}
+.main p{
+    padding: 10px 20px ;
+    text-align: center;
+    font-size: 25px;
+ 
+    background-color: indigo;
     color: white;
 }
-li img:hover{
-    background-color: white;
+.main{
+    padding: 20px 10px;
+    margin: 0px 100px;
+    border: 2px solid black;
+    height: 150px;
+    
 }
+.logn{
+    text-align: center;
+    
+}
+.un{
+    padding: 05px;
+    margin-top: 10px;
+    
+}
+.pw{
+    margin-top: 10px;
+    padding: 05px;
+    
+}
+.btn{
+    margin-top: 05px;
+    width: 70px;
+    height: 30px;
+    background-color: rgb(141, 124, 236);
+    color: white;
+
+}
+.btn:hover{
+    background-color: indigo;
+    color: white;
+}
+.ftr{
+    
+    height: 20px;
+    background-color: indigo;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: white;
+    text-align: center;
+ 
+   
+}
+.logn1{
+    text-align: center;
+    font-size: 20px;
+    
+}
+.main2{
+    padding: 20px 10px;
+    margin: 0px 100px;
+    border: 2px solid black;
+    height: 200px;
+
+}
+
